# rest-clown

./: demo_script.py  pyproject.toml
rest_clown/: _interfaces.py  _protocols.py  exceptions.py  resources.py
tests/: test_rest_clown.py
