[tool.poetry]
name = "rest-clown"
version = "0.1.0"
description = ""
authors = ["dhvandenakker <daan.van.den.akker@ordina.nl>"]

[tool.poetry.dependencies]
python = "^3.7"
mypy = "^0.971"
requests = "^2.28.1"
types-requests = "^2.28.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.8.0"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
